--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
     <title>Wbpack Exercise</title>
 </head>
 <body>
-    <h1>Hello webpack!</h1>
+    <h1>Hello webpackkkkkkkkkkkkk!</h1>
 </body>
 </html>
