--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   
-  <body>
+  <body id="body">
 
     <header>
         <p>Today's To Do List</p>
